@@ -1,3 +1,13 @@
+2005-07-20 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b62
+
+	* Fix: classes/Album.php
+	  - missing $ before a var
+	  - $wmAlphaName is not used when watermarking is wanted to during upload.
+
+	* Fix: removed/changed debug Code in lib/url.php
+
+	* Fix: size attribut in drawSelect2 was not correct handled.
+
 2005-07-19 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b61
 
 	* Fix: util.php
